# chroma

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.cargo/: config.toml
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ColorSwatch.tsx  DitherControlPanel.tsx  DitherView.tsx  DitherWorkspace.tsx  MatchPanel.tsx  MixerPanel.tsx  SelectionPanel.tsx  TitleBar.tsx
src/lib/: colorTheory.ts  colorUtils.ts  conversions.ts  dmcFloss.ts  paletteGenerator.ts  store.ts  types.ts
src/lib/dithering/: algorithms.ts  asciiRenderer.ts  characterSets.ts  paletteReduction.ts  types.ts  worker.ts
src/lib/spectral/: adapter.ts  pigmentDNA.ts
src/lib/types/: pinnedColor.ts
